# lammps-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.jules/: sentinel.md
src/mcp_server_lammps/: __init__.py  __main__.py  auth.py  server.py  utils.py
tests/: debug_mcp_server.lmp  in.lmp  test_server.py
