[project]
name = "mcp-server-lammps"
version = "0.2.0"
description = "A Model Context Protocol server for LAMMPS molecular dynamics simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Zois Li" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "starlette>=0.35.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
mcp-server-lammps = "mcp_server_lammps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pyright>=1.1.407",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
]
